Update author information: Add full name and email (Cristian Bravo Droguett)

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # GitHub Pages Configuration - Categoria al Día
 title: Categoria al Día
 description: Sistema de Gestión de Inventario Walmart Smart
-author: Cristian Bravo
+author: Cristian Bravo Droguett
+email: cristian.bravo.droguett@gmail.com
 github_username: operonte
 
 # Theme settings (opcional, usa el tema por defecto de GitHub)
